funcs: add event 'oncontextmenu'     now if user right-click on a line of lyrics, audio will play that line right away.
    todo: lyrics highlight (add class foucs) will occur some errors if user right-click on any line before the current line.

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 	<audio id="mp3" src=""></audio>
 	<script src="ask.js"></script>
 	<script src="lrcParser.js"></script>
+	<script src="contextMenu.js"></script>
 </body>
 </html>
