--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 	<script src="ask.js"></script>
 	<script src="lrcParser.js"></script>
 	<script src="contextMenu.js"></script>
+	<script src="drag.js"></script>
 </body>
 </html>
