funcs: add MouseWheel scrolling function on lyrics.     Note: may just work on Firefox.

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
 	<script src="lrcParser.js"></script>
 	<script src="contextMenu.js"></script>
 	<script src="drag.js"></script>
+	<script src="scroll.js"></script>
 </body>
 </html>
