combine: Good Life works on new UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="ui.css">
 </head>
 <body>
+    <div id="background"></div>
     <div id="main">
         <nav class='header row'>
             <span id="return" class='left'>Back</span>
@@ -57,6 +58,7 @@
             </div>
 
             <div id='controls' class="container row">
+                <audio src=""></audio>
                 <span id="play-mode">Mode</span>
                 <span id="pre-song">Pre</span>
                 <span id="play">Play</span>
@@ -66,5 +68,7 @@
 
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
