style: replace all icons

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,12 +9,12 @@
     <div id="background"></div>
     <div id="main">
         <nav class='header row'>
-            <span id="return" class='left'>Back</span>
+            <span id="back" class='left'></span>
             <span id="song-message">
                 <span id="song-title">The Saltwater Room</span> <br>
                 <span id="song-artist">Owl City</span>
             </span>
-            <span id="share" class='right'>Share</span>
+            <span id="share" class='right'></span>
         </nav>
 
         <div id="volume" class='row'>
@@ -59,11 +59,11 @@
 
             <div id='controls' class="container row">
                 <audio src=""></audio>
-                <span id="play-mode">Mode</span>
-                <span id="pre-song">Pre</span>
-                <span id="play">Play</span>
-                <span id="next-song">Next</span>
-                <span id="song-list">List</span>
+                <span id="play-mode" class='left'></span>
+                <span id="pre-song"></span>
+                <span id="play"></span>
+                <span id="next-song"></span>
+                <span id="song-list" class='right'></span>
             </div>
 
         </div>
