style: add some details

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             </span>
             <span id="share" class='right'></span>
         </nav>
-
+        <hr class='line' />
         <div id="volume" class='row'>
             <span class="speaker"></span>
             <div id="volume-range">
@@ -27,16 +27,21 @@
         </div>
 
         <div id="lyric-container" class='row'>
-            <ul id="lyric">
-                <li>I opend my eyes last night and saw you in the low light</li>
-                <li>昨夜我睁开眼，看见你在昏暗的灯光下</li>
-                <li> </li>
-                <li>Walking down by the bay, on the shore.</li>
-                <li>沿着海湾走下去， 在岸边</li>
-                <li> </li>
-                <li>staring up at the planes that aren't there anymore</li>
-                <li>盯着不再有星星的天空</li>
-            </ul>
+            <div id='lyric-lrc' class="page">
+                <ul id="lyric">
+                    <li>I opend my eyes last night and saw you in the low light</li>
+                    <li>昨夜我睁开眼，看见你在昏暗的灯光下</li>
+                    <li> </li>
+                    <li>Walking down by the bay, on the shore.</li>
+                    <li>沿着海湾走下去， 在岸边</li>
+                    <li> </li>
+                    <li>staring up at the planes that aren't there anymore</li>
+                    <li>盯着不再有星星的天空</li>
+                </ul>
+            </div>
+            <div id='lyric-album' class="page">
+                <span class='disk'></span>
+            </div>
         </div>
         <div id="option">
             <div id="option-menu">
