func: onSizeChange() will detect resize event and auto change the time-range length

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Netease Music UI</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="ui.css">
 </head>
 <body>
@@ -75,5 +76,6 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="time-range.js"></script>
 </body>
 </html>
