fix: add cross-browser CSS3 prefix and add supports on different devices. min-height: 440px min-width: 320px;

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,18 +18,18 @@
             <span id="share" class='right'></span>
         </nav>
         <hr class='line' />
-        <div id="volume" class='row'>
+        <div id="volume" class='row one-second'>
             <span class="speaker"></span>
-            <div id="volume-range">
+            <div id="volume-range" class='one-second'>
                 <span class="fill"></span>
                 <span class="range-btn"></span>
                 <span class="empty"></span>
             </div>
         </div>
 
-        <div id="lyric-container" class='row'>
+        <div id="lyric-container" class='row one-second'>
             <div id='lyric-lrc' class="page">
-                <ul id="lyric">
+                <ul id="lyric" class='one-second'>
                     <li>I opend my eyes last night and saw you in the low light</li>
                     <li>昨夜我睁开眼，看见你在昏暗的灯光下</li>
                     <li> </li>
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div id='lyric-album' class="page">
-                <span class='disk'></span>
+                <span class='disk one-second'></span>
             </div>
         </div>
         <div id="option">
@@ -55,7 +55,7 @@
         <div class="bottom">
             <div id='time' class='container row'>
                 <span id="current-time">00:00</span>
-                <div id="time-range">
+                <div id="time-range" class='one-second'>
                     <span class="fill"></span>
                     <span class="range-btn"></span>
                     <span class="empty"></span>
@@ -63,7 +63,7 @@
                 <span id="total-time">04:55</span>
             </div>
 
-            <div id='controls' class="container row">
+            <div id='controls' class="container row one-second">
                 <audio src=""></audio>
                 <span id="play-mode" class='left'></span>
                 <span id="pre-song"></span>
