--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <title>Netease Music UI</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+	<!--UC Fullscreen-->
+	<meta name="browsermode" content="application"/>
+
+	<meta name="x5-fullscreen" content="true" />
+	<meta name="x5-page-mode" content="app" />
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="description" content="Lyric Player" />
+	<meta name="keywords" content="lyrics,lyric"/>
+	<meta name="author" content="Jonham Chen, jonham@qq.com" />
+
+	<meta name="apple-mobile-web-app-title" content="Lyrics Player">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+
     <link rel="stylesheet" href="ui.css">
 </head>
 <body>
