func: add onAudioVolumeChange() and onAudioMute()

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <div id="time-range" class='one-second'>
                     <span class="fill"></span>
                     <span class="range-btn"></span>
+                    <span class="loaded"></span>
                     <span class="empty"></span>
                 </div>
                 <span id="total-time">04:55</span>
