--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
 
         <div id="lyric-container" class='row one-second'>
+            <!-- page1 -->
             <div id='lyric-lrc' class="page">
                 <ul id="lyric" class='one-second'>
                     <li>I opend my eyes last night and saw you in the low light</li>
@@ -54,24 +55,29 @@
                     <li>staring up at the planes that aren't there anymore</li>
                     <li>盯着不再有星星的天空</li>
                 </ul>
+                <div id="option">
+                    <span id="option-btn"></span>
+                    <div id="option-menu">
+                        <span class="menu-item">歌词调整</span>
+                        <span class="menu-item">翻译报错</span>
+                        <span class="menu-item">歌词报错</span>
+                        <span class="menu-item">歌曲报错</span>
+                    </div>
+                </div>
             </div>
+            <!-- page2 -->
             <div id='lyric-album' class="page">
                 <span class='disk one-second'></span>
-            </div>
-        </div>
-        <div id="option">
-            <div id="option-menu">
-                <span class="menu-item">歌词调整</span>
-                <span class="menu-item">翻译报错</span>
-                <span class="menu-item">歌词报错</span>
-                <span class="menu-item">歌曲报错</span>
+                <!-- <div class="bottom">
+                    span
+                </div> -->
             </div>
         </div>
         <div class="bottom">
             <div id='time' class='container row'>
                 <span id="current-time">00:00</span>
                 <div id="time-range" class='one-second'>
-                    <span class="loaded"></span>
+                    <span class="loaded one-second"></span>
                     <span class="fill"></span>
                     <span class="range-btn"></span>
                     <span class="empty"></span>
