html: add span.song-opt-grp (favorite, comments, file-option span)

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             </span>
             <span id="share" class='right'></span>
         </nav>
-        <hr class='line' />
+
         <div id="volume" class='row one-second'>
-            <span class="speaker"></span>
-            <div id="volume-range" class='one-second'>
+            <span class="speaker layer-2"></span>
+            <div id="volume-range" class='one-second layer-2'>
                 <span class="fill"></span>
                 <span class="range-btn"></span>
                 <span class="empty"></span>
             </div>
+            <span class="value"></span>
         </div>
-
         <div id="lyric-container" class='row one-second'>
             <!-- page1 -->
             <div id='lyric-lrc' class="page">
-                <ul id="lyric" class='one-second'>
+                <ul id="lyric" class='one-second layer-1'>
                     <li>I opend my eyes last night and saw you in the low light</li>
                     <li>昨夜我睁开眼，看见你在昏暗的灯光下</li>
                     <li> </li>
@@ -55,9 +55,9 @@
                     <li>staring up at the planes that aren't there anymore</li>
                     <li>盯着不再有星星的天空</li>
                 </ul>
-                <div id="option">
+                <div id="option" class='layer-2'>
                     <span id="option-btn"></span>
-                    <div id="option-menu">
+                    <div id="option-menu" class='hide-fold'>
                         <span class="menu-item">歌词调整</span>
                         <span class="menu-item">翻译报错</span>
                         <span class="menu-item">歌词报错</span>
@@ -68,13 +68,15 @@
             <!-- page2 -->
             <div id='lyric-album' class="page">
                 <span class='disk one-second'></span>
-                <!-- <div class="bottom">
-                    span
-                </div> -->
+                <span class='song-opt-grp'>
+                    <span class="favorite"></span>
+                    <span class="comments"></span>
+                    <span class="file-option"></span>
+                </span>
             </div>
         </div>
         <div class="bottom">
-            <div id='time' class='container row'>
+            <div id='time' class='container row layer-3'>
                 <span id="current-time">00:00</span>
                 <div id="time-range" class='one-second'>
                     <span class="loaded one-second"></span>
