--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <!-- page1 -->
             <div id='lyric-lrc' class="page">
                 <ul id="lyric" class='one-second layer-1'>
-                    <li>I opend my eyes last night and saw you in the low light</li>
-                    <li>昨夜我睁开眼，看见你在昏暗的灯光下</li>
-                    <li> </li>
-                    <li>Walking down by the bay, on the shore.</li>
-                    <li>沿着海湾走下去， 在岸边</li>
-                    <li> </li>
-                    <li>staring up at the planes that aren't there anymore</li>
-                    <li>盯着不再有星星的天空</li>
+                    <li class='line'>I opend my eyes last night and saw you in the low light</li>
+                    <li class='line'>昨夜我睁开眼，看见你在昏暗的灯光下</li>
+                    <li class='line'> </li>
+                    <li class='line'>Walking down by the bay, on the shore.</li>
+                    <li class='line'>沿着海湾走下去， 在岸边</li>
+                    <li class='line'> </li>
+                    <li class='line'>staring up at the planes that aren't there anymore</li>
+                    <li class='line'>盯着不再有星星的天空</li>
                 </ul>
                 <div id="option" class='layer-2'>
                     <span id="option-btn"></span>
@@ -69,8 +69,8 @@
             <div id='lyric-album' class="page">
                 <span class='disk one-second'></span>
                 <span class='song-opt-grp'>
-                    <span class="favorite"></span>
-                    <span class="comments"></span>
+                    <span id='btnFavorite' class="favorite btnToggle"></span>
+                    <span class="comments"><span>0</span></span>
                     <span class="file-option"></span>
                 </span>
             </div>
@@ -99,6 +99,7 @@
         </div>
     </div>
 
+    <script src="js/$getter.js"></script>
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
 </body>
