func: add **'file-load.js'**:     1. support drag mp3 (or other playable audio file) directly to brower     2. use FileReader() to read;     3. use AudioContext() to decodeAudioData;

--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
     <script src="js/$getter.js"></script>
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
+    <script src="js/file-load.js"></script>
 </body>
 </html>
