fix: add some.css?xxx to make css file up to date

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 	<meta name="apple-mobile-web-app-title" content="Lyrics Player">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-
-    <link rel="stylesheet" href="style/ui.css">
+    <!-- using ?xxxx to make browser update css file -->
+    <link rel="stylesheet" href="style/ui.css?0001">
 </head>
 <body>
     <div id="background"></div>
