fix: move dConsole style definitions to css file, create two class .dConsole-line , .dConsole-window

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 	<meta name="apple-mobile-web-app-title" content="Lyrics Player">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-    <!-- using ?xxxx to make browser update css file -->
-    <link rel="stylesheet" href="style/ui.css?0001">
+
+    <!-- using ?xxxx to make browser update css file 1 -->
+    <link rel="stylesheet" href="style/ui.css?0002">
 </head>
 <body>
     <div id="background"></div>
