--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         </div>
     </div>
 
+    <script src="js/cross-browser.js"></script>
     <script src="js/$getter.js"></script>
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
