--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         </div>
     </div>
 
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/globalNamespace.js"></script>
     <script src="js/cross-browser.js"></script>
     <script src="js/$getter.js"></script>
     <script src="js/app.js"></script>
