fix: change tags className, ID to obey the standard
1. fix classname and ID values
  CSS value : btn-songList
  JS     value: btnSongList

2. add btnPlayMode two  modes (shuffle, loop, reapeatone)
3.

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <div id="main">
                 <nav class='header row'>
                     <span id="btn-back" class='left'></span>
-                    <span id="song-message">
-                        <span id="song-title">The Saltwater Room</span> <br>
-                        <span id="song-artist">Owl City</span>
+                    <span id="tag-songMessage">
+                        <span id="tag-songTitle">The Saltwater Room</span> <br>
+                        <span id="tag-songArtist">Owl City</span>
                     </span>
                     <span id="btn-share" class='right'></span>
                 </nav>
 
                 <div id="volume" class='row ease-p6'>
                     <span class="speaker layer-2"></span>
-                    <div id="volume-range" class='ease-p6 layer-2'>
+                    <div id="range-volume" class='ease-p6 layer-2'>
                         <span class="fill"></span>
                         <span class="range-btn"></span>
                         <span class="empty"></span>
@@ -72,30 +72,30 @@
                         <span class='disk ease-p6'></span>
                         <span class='song-opt-grp'>
                             <span id='btnFavorite' class="favorite btnToggle"></span>
-                            <span class="comments"><span>0</span></span>
+                            <span class="btnComments"><span>0</span></span>
                             <span class="btn-fileOpt"></span>
                         </span>
                     </div>
                 </div>
                 <div class="bottom">
                     <div id='time' class='container row layer-3'>
-                        <span id="current-time">00:00</span>
+                        <span id="tag-currentTime">00:00</span>
                         <div id="time-range" class='ease-p6'>
                             <span class="loaded ease-p6"></span>
                             <span class="fill"></span>
                             <span class="range-btn"></span>
                             <span class="empty"></span>
                         </div>
-                        <span id="total-time">04:55</span>
+                        <span id="tag-totalTime">04:55</span>
                     </div>
 
                     <div id='controls' class="container row ease-p6">
                         <audio src=""></audio>
-                        <span id="play-mode" class='left'></span>
-                        <span id="pre-song"></span>
-                        <span id="play"></span>
-                        <span id="next-song"></span>
-                        <span id="song-list" class='right'></span>
+                        <span id="btn-playMode" class='left'></span>
+                        <span id="btn-preSong"></span>
+                        <span id="btn-play"></span>
+                        <span id="btn-nextSong"></span>
+                        <span id="btn-songList" class='right'></span>
                     </div>
 
                 </div>
@@ -138,3 +138,4 @@
     <script src="js/file-load.js"></script>
 </body>
 </html>
+tag-songArtist
