fix: add .range to each Range, and change .fill to .range-fill
1. .fill ==> .range-fill
2. each range will get a class name of .range

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
                 <div id="volume" class='row ease-p6'>
                     <span class="speaker layer-2"></span>
-                    <div id="range-volume" class='ease-p6 layer-2'>
-                        <span class="fill"></span>
+                    <div id="range-volume" class='range ease-p6 layer-2'>
+                        <span class="range-fill"></span>
                         <span class="range-btn"></span>
                         <span class="empty"></span>
                     </div>
@@ -80,9 +80,9 @@
                 <div class="bottom">
                     <div id='time' class='container row layer-3'>
                         <span id="tag-currentTime">00:00</span>
-                        <div id="time-range" class='ease-p6'>
+                        <div id="time-range" class='range ease-p6'>
                             <span class="loaded ease-p6"></span>
-                            <span class="fill"></span>
+                            <span class="range-fill"></span>
                             <span class="range-btn"></span>
                             <span class="empty"></span>
                         </div>
