--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="speaker layer-2"></span>
                     <div id="range-volume" class='range ease-p6 layer-2'>
                         <span class="range-fill"></span>
-                        <span class="range-btn"></span>
+                        <span class="range-btn" style="left:100%"></span>
                         <span class="empty"></span>
                     </div>
                     <span class="value"></span>
@@ -80,10 +80,10 @@
                 <div class="bottom">
                     <div id='time' class='container row layer-3'>
                         <span id="tag-currentTime">00:00</span>
-                        <div id="time-range" class='range ease-p6'>
+                        <div id="range-time" class='range ease-p6'>
                             <span class="loaded ease-p6"></span>
                             <span class="range-fill"></span>
-                            <span class="range-btn"></span>
+                            <span class="range-btn" style="left:0%"></span>
                             <span class="empty"></span>
                         </div>
                         <span id="tag-totalTime">04:55</span>
