func: add 'js/drag.js' support 'mouse--' events on Ranges
1. listen to 'mousedown', 'mousemove', 'mouseup' events on Ranges
    'mousedown' on ranges, this will log 
        range.width,
        e.clientX,
        btn.style.left
    'mousemove' on window: this will log nothing, just calculate offset width of mouse movement of x-coordinate, and update range value and both btn.left and fill.width
    'mouseup' on window, this will do everything like 'mousemove' listener, but it will also log
        leftPercent // for next movement
    and will remove listeners on both 'mousemove' and 'mouseup' on window
2. addNodeTo(ranges)  that with 
    1.range.node.rangeTo( percent ) : change range-bt1n and range-fill at the same time ( left value of btn, and width value of fill)
    2. range.node.change( percent ) : change value of target that binded to this change: 
        range-time change $('audio').currentTIme;
        range-volume change $('audio').volume;
3. addNodeTo() to #tag-songMessage that
    tagSongMessage.node.update( title, artist ) 
    tagSongMessage.node.update( { title: 'title',  artist: 'artist' } )

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
     <script src="js/file-load.js"></script>
+    <script src="js/drag.js"></script>
 </body>
 </html>
 tag-songArtist
