--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                     </div>
                     <span class="value"></span>
                 </div>
-                <div id="lyric-container" class='row ease-p6'>
+
+                <div id="view-container" class='row ease-p6'>
                     <!-- page1 -->
-                    <div id='lyric-lrc'>
+                    <div id='view-lyric'>
                         <ul id="lyric" class='ease-p6 layer-1'>
                             <li class='line'>I opend my eyes last night and saw you in the low light</li>
                             <li class='line'>昨夜我睁开眼，看见你在昏暗的灯光下</li>
@@ -57,9 +58,9 @@
                             <li class='line'>staring up at the planes that aren't there anymore</li>
                             <li class='line'>盯着不再有星星的天空</li>
                         </ul>
-                        <div id="option" class='layer-2'>
-                            <span id="option-btn"></span>
-                            <div id="menu-option" class='ease-p3 menu-hidetoRB'>
+                        <div id="container-fileOption" class='menu layer-2'>
+                            <span id="btn-lyricOption"></span>
+                            <div id="menu-lyricOption" class='ease-p3 menu-hidetoRB'>
                                 <span class="menu-item">歌词调整</span>
                                 <span class="menu-item">翻译报错</span>
                                 <span class="menu-item">歌词报错</span>
@@ -68,7 +69,7 @@
                         </div>
                     </div>
                     <!-- page2 -->
-                    <div id='lyric-album' style="display:none;">
+                    <div id='view-album' style="display:none;">
                         <span class='disk ease-p6'></span>
                         <span class='song-opt-grp'>
                             <span id='btnFavorite' class="favorite btnToggle"></span>
@@ -77,6 +78,9 @@
                         </span>
                     </div>
                 </div>
+
+
+                <!-- RangeTime and Controls Buttons -->
                 <div class="bottom">
                     <div id='time' class='container row layer-3'>
                         <span id="tag-currentTime">00:00</span>
