Project: split some code from app.js
create:
1. attachNodeToElement.js  // add node to any view group that change in a regular way
2. attachDOMElementEvents.js // attach events on any kind of btn or view

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
     <script src="js/cross-browser.js"></script>
     <script src="js/$getter.js"></script>
     <script src="js/globalNamespace.js"></script>
+
+    <script src="js/attachNodeToElement.js"></script>
+    <script src="js/attachDOMElementEvents.js"></script>
     <script src="js/app.js"></script>
     <script src="js/time-range.js"></script>
     <script src="js/file-load.js"></script>
