--- a/index.html
+++ b/index.html
@@ -110,24 +110,72 @@
             <span class="test-identify">PAGE-system</span>
         </div>
 
-        <div id="menu-songlist" class="menu test-color-blue ease-p3 menu-hide">
-            <ul id="songlist"></ul>
-            <span class="test-identify">MENU-songlist</span>
+        <div id="menu-songlist" class="menu ease-p3 menu-hide">
+            <span class="header">
+                <span class="btn left">收藏全部</span>
+                <span class="center">播放列表</span>
+                <span class="btn right">清空</span>
+            </span>
+            <ul id="songlist">
+                <li>Counting Stars</li>
+                <li>All The Right Moves</li>
+                <li>Good Life</li>
+                <li>I Lived</li>
+                <li>Secrets</li>
+                <li>Stop and Stare</li>
+                <li>Something I Need</li>
+            </ul>
         </div>
 
-        <div id="menu-share" class="menu test-color-yellow ease-p3 menu-hide">
-            <ul id="ulShare"></ul>
-            <span class="test-identify">MENU-share</span>
+        <div id="menu-share" class="menu ease-p3 menu-hide">
+            <ul id="ulShare">
+                <li>分享到云音乐</li>
+                <li>私信分享</li>
+                <li>微信、QQ分享</li>
+                <li>易信分享</li>
+                <li>复制链接</li>
+                <li>其他</li>
+            </ul>
         </div>
 
-        <div id="menu-fileOpt" class="menu test-color-yellow ease-p3 menu-hide">
-            <ul id="ulFileOpt"></ul>
-            <span class="test-identify">MENU-FileOption</span>
+        <div id="menu-fileOpt" class="menu ease-p3 menu-hide">
+            <span class="tag-songMessage">
+                歌曲：The Saltwater Room
+            </span>
+            <ul id="ulFileOpt">
+                <li>收藏到歌单</li>
+                <li>下载</li>
+                <li class='tag-songArtist'>歌手：Owl City</li>
+                <li class='tag-songAlbum'>专辑: The Saltwater Room</li>
+                <li>音质：自动选择</li>
+                <li>相似推荐</li>
+                <li>定时停止播放</li>
+                <li>打开驾驶模式</li>
+            </ul>
         </div>
 
-        <div id="sidebar-left" class="sidebar test-color-green ease-p3 sidebar-hide">
-            <span class="test-identify">SIDEBAR-left</span>
-
+        <div id="sidebar-left" class="sidebar ease-p3 sidebar-hide">
+            <span id="tag-userMessage">
+                User-Message
+            </span>
+            <ul>
+                <li>我的消息</li>
+                <li>积分商城 <span class="tag">130积分</span></li>
+                <li>付费音乐包</li>
+                <li>在线听歌免流量</li>
+                <li>听歌识曲</li>
+                <li>主题换肤 <span class="tag">官方红</span></li>
+                <li>夜间模式 <span class="btn-switch"></span></li>
+                <li>定时停止播放</li>
+                <li>音乐闹钟</li>
+                <li>驾驶模式</li>
+                <li>我的音乐云盘</li>
+                <li>_</li>
+            </ul>
+            <span class="bottom">
+                <span class="btn">设置</span>
+                <span class="btn">退出应用</span>
+            </span>
         </div>
     </div>
 
