func: building Song() and SongList()

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <!-- page2 -->
                     <div id='view-album' style="display:none;">
-                        <span class='disk ease-p6'></span>
+                        <span class='view-disk ease-p6'></span>
                         <span class='song-opt-grp'>
                             <span id='btnFavorite' class="favorite btnToggle"></span>
                             <span class="btnComments"><span>0</span></span>
@@ -106,8 +106,8 @@
             </div>
         </div>
 
-        <div id="page-system" class="page test-color-red ease-p3 page-hide">
-            <span class="test-identify">PAGE-system</span>
+        <div id="page-system" class="page ease-p3 page-hide">
+            <span>Add messages about 'local' filesystem.</span>
         </div>
 
         <div id="menu-songlist" class="menu ease-p3 menu-hide">
